force-app/main/default/objects/Web3Enabler_Settings__c/Web3Enabler_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Web3Enabler Settings</label>
</CustomObject> 