force-app/main/default/objects/Web3Enabler_Settings__c/fields/CoinGecko_API_Key__c.field-meta.xml
<CustomField>
    <fullName>CoinGecko_API_Key__c</fullName>
    <label>CoinGecko API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 