force-app/main/default/objects/Web3Enabler_Settings__c/fields/DailyPriceUpdateFrequency__c.field-meta.xml
<CustomField>
    <fullName>DailyPriceUpdateFrequency__c</fullName>
    <label>Daily Price Update Frequency</label>
    <type>Text</type>
    <length>16</length>
</CustomField> 