force-app/main/default/objects/Web3Enabler_Settings__c/fields/DailyPriceUpdateJobId__c.field-meta.xml
<CustomField>
    <fullName>DailyPriceUpdateJobId__c</fullName>
    <label>Daily Price Update Job Id</label>
    <type>Text</type>
    <length>32</length>
</CustomField> 