force-app/main/default/objects/Web3Enabler_Settings__c/fields/DailyPriceUpdateScheduled__c.field-meta.xml
<CustomField>
    <fullName>DailyPriceUpdateScheduled__c</fullName>
    <label>Daily Price Update Scheduled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField> 